<resources>
    <string name="app_name">Номера помощи</string>
    <string name="banner_ad_unit_id">ca-app-pub-7908895047124036/5891515507</string>
    <string name="info_perevoda_mts">
        **********\n
        комиссия 7рублей
        ***********\n
        Ограничения и Максимальная сумма перевода
Для осуществления таких финансовых операций Вам на счету необходимо иметь сумму, на которую Вы пополняете сим-карту друга + 7 рублей комиссию (для первого раза), и + 90 рублей.
В любом случае в остатке должно находиться на балансе отправителя не менее 90 р.
Максимальная сумма совершения денежных отправлений на один номер – 1500 р. в сутки.
Максимально допустимая сумма пополнения на несколько номеров – 3000 р. в сутки.
Помните, что кредитный лимит для финансовой поддержки других пользователей использовать не получится и невозможно.
    </string>
    <string name="info_perevoda_tele2">
        *********\n
        комисия 5рублей на tele2
        и + 5 рублей+5% на др.
        **********\n
        Сумму мобильного перевода указывайте в рублях как целое число, без указания копеек.
Обратите внимание, что если вы совершаете перевод впервые или после долгого перерыва — при первой попытке перевести деньги на счет другого абонента Tele2, операция не будет совершена, и на ваш телефон поступит информационное сообщение с условиями предоставления услуги Мобильный перевод. После получения этого SMS, наберите команду мобильного перевода еще раз.

При успешном совершении перевода, отправитель и получатель средств получат соответствующие SMS-уведомления. Информационные сообщения также направляются в случаях некорректного использования услуги.

В целях обеспечения безопасности мобильного счетов клиентов, для мобильного перевода от Теле2 введён ряд ограничений. Тем не менее, просим вас быть внимательными и не оставлять телефон без присмотра на долгое время, чтобы средствами на счёте не смогли воспользоваться без вашего ведома и согласия.

Принцип предоставления услуги «Мобильного перевода» не отличается от привычных платёжных систем. По этой причине, при совершении перевода денег с одного телефона Tele2 на другой телефон, взимается комиссия, вне зависимости от суммы перевода от одного абонента Теле2 к другому абоненту Теле2.

Например, если Вы переводите средства на телефон другого абонента Теле2 в размере 100 руб., на его счет поступит полная сумма перевода. C вашего счёта будет списана сумма перевода и комиссия за услугу. Узнать точный размер комиссии за услугу «Мобильный перевод» от Теле2 вы можете, набрав бесплатную команду * 1 4 5 *

Условия предоставления услуги «Мобильный перевод»
— услуга доступна для абонента по истечении 60 дней с момента регистрации в сети Tele2 или после первого пополнения счёта после подключения (для различных регионов обслуживания Теле2 ограничения по использованию услуги могут быть разными, уточняйте информацию, набрав команду *145#)
— сумма перевода может быть от 10 до 1000 рублей, при этом после перевода на вашем счете должно остаться не менее 10 рублей,
— вы можете отправлять Мобильные переводы неограниченное число раз, но общая сумма Мобильных переводов в день не может превышать 600 рублей,
— с помощью услуги «Мобильный перевод» счет любого абонента Tele2 (в том числе и ваш собственный), может быть пополнен не более одного раза в сутки,
— «Мобильный перевод» не доступен, если вы заказывали «Обещанный платеж» и срок его действия еще не истек,
— услуга доступна только абонентам — физическим лицам.
Если вы не хотите, чтобы с вашего номера можно было переводить деньги на другой, необходимо запретить услугу «Мобильный перевод» и отключить возможности пополнения других номеров Теле2 со своего номера. Для этого, наберите команду * 1 4 5 * 0 # Клавиша посыла вызова

Чтобы вновь подключить услугу «Мобильный перевод» позвоните в информационно-справочную службу Tele2 по номеру 611 и дождитесь соединения с оператором.
    </string>
    <string name="info_perevoda_beeline">
        ***********\n
        Стоимость одного перевода 5 руб.
        ************\n

Если вы уже являетесь абонентом «Билайн», услуга «Мобильный перевод» будет доступна, если вы израсходовали на услуги связи не менее 150 руб.
Сумма одного денежного перевода от 10 руб. до 200 руб.
Максимальная сумма переводов в сутки 400 руб.
Минимальный остаток на балансе после совершения перевода 50 руб.
Максимальная сумма на балансе после получения перевода 10000 руб.
Максимальное число переводов, которое вы можете получить в сутки 5
Минимальный интервал между двумя заявками на перевод 2 мин.
Перевод средств со счета получателя после получения им «Mобильного перевода» возможен только через 24 час.
    </string>
    <string name="info_perevoda_megafon">
        **********\n
        комиссия — 6% на megafon
        ***********\n
Если вы переводите деньги на счёт абонента других филиалов «МегаФона» или любого другого российского оператора, то взимается комиссия в соответствии со ставками услуги «Мобильные платежи» (определённый процент от суммы перевода в зависимости от оператора связи, которому отправляются средства).
Комиссию оплачивает отправитель перевода. Для получателя услуга бесплатна.
Услуга предоставляется бесплатно и не требует подключения.

        Управление

Для завершения операции перевода отправителю необходимо выслать уникальный код подтверждения, содержащийся в SMS-запросе, полученном после набора команды.

При проведении операции перевода учитываются существующие особенности услуги «Мобильные платежи»:

Остаток средств на балансе после выполнения платежа	10руб.
Минимальная сумма единовременного платежа	1руб.
Максимальная сумма единовременного платежа	15 000руб.
Общая сумма платежей, совершённых за сутки	40 000руб.
Общая сумма платежей, совершённых за месяц	40 000руб.
    </string>
    <string name="button_polis">Полиция 102</string>
    <string name="button_skoray">Скорая помощь 103</string>
    <string name="button_pozar">Пожарная часть 101</string>
    <string name="button_zag">Газовая служба 104</string>
    <string name="button_edinay_slugba">Единая служба спасения 112 </string>
    <string name="action_save_read">Сохраненые номера </string>
    <string name="action_save">Сохранить номер </string>
    <string name="edinay_slugba_spasenia">Единою службу спасения</string>
    <string name="Pogarnay_chast">Пожарную часть</string>
    <string name="Policia">Полицию</string>
    <string name="Skoray">Скорою помощь</string>
    <string name="Gaz">Газовую службу</string>
    <string name="Operatori">Операторы\n(службы поддержки) </string>
    <string name="title_activity_operatori">Номера поддержки операторов </string>
    <string name="back">Назад</string>
    <string name="Tele2">Tele2</string>
    <string name="Beeline">Beeline</string>
    <string name="Mtc">Mtc</string>
    <string name="Megafon">Megafon</string>
    <string name="title_activity_list_number">List_number</string>
    <string name="Pozvonit_na_gorodskoy">Позвонить на городской </string>
    <string name="Vse_nomera_slugb">Другие номера служб </string>
    <string name="title_activity_pozvonit_na_gorodskoy">Позвонить на городской </string>
    <string name="vvedite_nomer_telefona">Введите номер телефона </string>
    <string name="shag_1_3">Шаг:1/2</string>
    <string name="viberi_gorod">Код(выберите город)</string>
    <string name="title_activity_nomer_kod_zvonok">Код + номер </string>
    <string name="shg2_2">Шаг 2/2</string>
    <string name="vvedite_nomer">Введите номер </string>
    <string name="kod_nomer">Код+номер </string>
    <string name="zvonit">Звонить </string>
    <string name="Pozvonit">Позвонить </string>
    <string name="Smarts">Smarts</string>
    <string name="Zvonok">Звонок</string>
    <string name="Vi_deistvitelno_hotite_pozvonit">Вы действительно хотите позвонить в\n</string>
    <string name="net">Нет</string>
    <string name="da">Да</string>
    <string name="Neudalos_naiti_nastroiku">Неудалось сохранить настройку </string>
    <string name="Budem_sprashivat_pered_zvonkom">Будем спрашивать перед звонком </string>
    <string name="Budem_zvonit_srazu">Будем звонить сразу </string>
    <string name="o_programme">О программе </string>
    <string name="dla_svazi">Для связи: </string>
    <string name="zvonok">Звонок </string>
    <string name="vi_deistvitelno_hotite_pozvonot">Вы действительно хотите позвонить в\n</string>
    <string name="Deomin_dmitriy">Дёмин Дмитрий\n</string>
    <string name="Vibrali_gorod">Выбрали город: </string>
    <string name="Pozvonit_2">Позвонить: </string>
    <string name="save">Сохранили: </string>
    <string name="error">Ошибка</string>
    <string name="delete">"Удаление "</string>
    <string name="vi_deistvitelno_hotite_delete">Вы действительно хотите удалить: </string>
    <string name="delet_da">Удалили</string>
    <string name="error_save">Ошибка сохранения </string>
    <string name="error_delet">Ошибка удаления </string>
    <string name="O_proge">О программе </string>
    <string name="exit">Выход</string>
    <string name="Vopros_pered_naborom_nomera">Вопрос перед набором номера </string>
    <string name="Vvedite_nazvania_goroda_dla_poiska">Введите название города для поиска </string>
    <string-array name="array_list_vse">
        <item>«Ребенок в опасности»: 122</item>
        <item>«Ребенок в опасности»: 123</item>
        <item>Информацию и инструкцию по пользованию электронными госуслугами онлайн: 115</item>
        <item>Телефон доверия полиции: 128</item>
        <item>Телефон доверия для детей, подростков и их родителей (беслатно): 88002000122</item>
        <item>Телефон доверия для женщин подвершихся носилию (бесплатно с 9:00–21:00): 88007000600</item>
        <item>Горячая линия для онкологических больных и их родственников(бесплатно): 88001000191</item>
        <item>Горячая линия по детской онкологии: 88002000609</item>
    </string-array>
    <string-array name="array_list_tele2">
        <item>Короткий номер: 611</item>
        <item>Со всех регионов: +78005550611</item>
        <item>В роуминге: +79515200611</item>
    </string-array>
    <string-array name="array_list_beeline">
        <item>Короткий номер: 0611</item>
        <item>С другова оператора или городского: 88007000611</item>
        <item>В международном роуминге: +74959748888</item>
    </string-array>
    <string-array name="array_list_megafon">
        <item>Короткий номер: 0505</item>
        <item>С другова оператора или городского: 88005500500</item>
        <item>В международном роуминге: +79261110500</item>
        <item>Отправить SMS с вопросом \n(для аб.Megafon в России беспл): 0500</item>
    </string-array>
    <string-array name="array_list_smarts">
        <item>Короткий номер: 0121</item>
        <item>Самара: +78462727272</item>
        <item>Тольятти: +78482464646</item>
        <item>Сызрань: +78464980000</item>
    </string-array>
    <string-array name="array_list_mts">
        <item>Короткий номер: 0890</item>
        <item>С другова оператора или городского: 88002500890</item>
        <item>В международном роуминге: +74957660166</item>
    </string-array>
    <string name="Vo_ves_ekran">Во весь экран</string>
    <string name="Settings">Настройки</string>
    <string name="Abaut_112">О номере 112</string>
    <string name="Kak_vizvat_pozar">Как правельно вызвать пожарных</string>
    <string name="Kak_vizvat_pol">Как правельно вызвать полицию</string>
    <string name="Kak_vizvat_skoru">Как правельно вызвать скорую</string>
    <string name="Izmenit_nomera">Изменить номера</string>
    <string name="Button">Кнопка</string>
    <string name="Number">Номер</string>
    <string name="Edinay_s_s">Единая служба спасения</string>
    <string name="Pozar_chast">Пожарная часть</string>
    <string name="Pol">Полиция</string>
    <string name="Scor">Скорая помощь</string>
    <string name="Gazov">Газовая служба</string>
    <string name="Vash_operator_ne_vibrano">Ваш оператор(не выбрано)</string>
</resources>