<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    tools:context="dmitriy.deomin.helpnumber_free.Setting">


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Vash_operator_ne_vibrano"
        android:id="@+id/button_operator"
        android:onClick="Clik_operator" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Vopros_pered_naborom_nomera"
            android:id="@+id/textView_zvnit"
            android:layout_weight="1"
            android:textSize="20sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_zvonit"
            android:checked="false"
            android:paddingRight="5dp"
            android:onClick="clik_vopros" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Vo_ves_ekran"
            android:id="@+id/textView_ekran"
            android:layout_weight="1"
            android:textSize="20sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_ekran"
            android:checked="false"
            android:paddingRight="5dp"
            android:onClick="clik_ekran" />
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Izmenit_nomera"
        android:id="@+id/button_number_mod"
        android:layout_gravity="center_horizontal"
        android:onClick="edit_number" />

</LinearLayout>
