<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dmitriy.deomin.helpnumber_free.Pozvonit_na_gorodskoy">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viberi_gorod"
            android:id="@+id/textView_gorod_label"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vvedite_nomer"
            android:id="@+id/textView_number_label"
            android:textSize="15sp"
            android:textStyle="bold"
            android:inputType="number"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editText_kod"
            android:layout_weight="1"
            android:hint="код"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editText_number"
            android:layout_weight="1"
            android:hint="номер"
            android:focusable="true"
            android:focusableInTouchMode="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent">


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_find"
                android:hint="@string/Vvedite_nazvania_goroda_dla_poiska" />

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >
            </ListView>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/Pozvonit"
                android:id="@+id/button_coll"
                android:onClick="clik_call"
                android:textColor="@color/Red" />



        </LinearLayout>

    </LinearLayout>

</LinearLayout>
